--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,30 +1,30 @@
-name: Execute SSH Script
+# name: Execute SSH Script
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
-jobs:
-  execute-ssh:
-    runs-on: ubuntu-latest
+# jobs:
+#   execute-ssh:
+#     runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+#     steps:
+#     - name: Checkout repository
+#       uses: actions/checkout@v2
 
-    - name: Execute SSH Command
-      uses: appleboy/ssh-action@v0.1.4
-      with:
-        host: ${{ secrets.SSH_HOST }}
-        username: ${{ secrets.SSH_USERNAME }}
-        password: ${{ secrets.SSH_PASSWORD }}
-        script: |
-          echo ${{ secrets.SSH_PASSWORD }} | sudo -S bash -c '
-          cd ${{ secrets.PROJECT_PATH }}
-          git remote set-url origin https://github.com/a-dev-mobile/ThreadApi.git
-          git pull
-          export SCRIPT_PATH="${{ secrets.SCRIPT_PATH }}"
-          chmod +x $SCRIPT_PATH
-          $SCRIPT_PATH
-          '
+#     - name: Execute SSH Command
+#       uses: appleboy/ssh-action@v0.1.4
+#       with:
+#         host: ${{ secrets.SSH_HOST }}
+#         username: ${{ secrets.SSH_USERNAME }}
+#         password: ${{ secrets.SSH_PASSWORD }}
+#         script: |
+#           echo ${{ secrets.SSH_PASSWORD }} | sudo -S bash -c '
+#           cd ${{ secrets.PROJECT_PATH }}
+#           git remote set-url origin https://github.com/a-dev-mobile/ThreadApi.git
+#           git pull
+#           export SCRIPT_PATH="${{ secrets.SCRIPT_PATH }}"
+#           chmod +x $SCRIPT_PATH
+#           $SCRIPT_PATH
+#           '
